--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
     <EditText
         android:id="@+id/text_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="32dp"
+        android:layout_gravity="top"
+        android:background="#CC173856"
         android:gravity="center"
+        android:inputType="none"
+        android:nextFocusDown="@+id/text_bot"
         android:padding="8dp"
         android:textColor="@color/pure_white"
+        android:textSize="32dp"
         tools:text="Top Text"
-        android:background="#CC173856"
-        android:layout_alignParentTop="true"
-        android:nextFocusDown="@+id/text_bot"
-        android:inputType="none"
-        />
+    />
 
     <EditText
         android:id="@id/text_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="32dp"
+        android:layout_gravity="bottom"
+        android:background="#CC173856"
         android:gravity="center"
+        android:inputType="none"
         android:padding="8dp"
         android:textColor="@color/pure_white"
+        android:textSize="32dp"
         tools:text="Bottom Text"
-        android:background="#CC173856"
-        android:layout_alignParentBottom="true"
-        android:inputType="none"
-        />
+    />
 
     <TextView
         android:id="@+id/text_mid"
@@ -37,23 +39,22 @@
         android:layout_height="wrap_content"
         android:background="#CC000000"
         android:gravity="center"
-        android:textColor="@color/pure_white"
         android:padding="4dp"
+        android:textColor="@color/pure_white"
         android:textSize="14sp"
-        />
+    />
 
     <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
         android:id="@+id/edit_text_mid"
-        android:gravity="center"
-        android:background="#CC000000"
-        android:textColor="@color/pure_white"
-        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="#CC000000"
+        android:gravity="center"
         android:padding="4dp"
+        android:textColor="@color/pure_white"
         android:textSize="14sp"
-        />
+    />
 
 
-
-</RelativeLayout>
+</FrameLayout>
