--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -91,6 +91,7 @@
     <dimen name="message_bubble_corner_radius">8dp</dimen>
     <dimen name="chat_message_bubble_padding">8dp</dimen>
     <dimen name="chat_profile_photo_diameter">32dp</dimen>
-    <dimen name="radius_crop_mode">4dp</dimen>
+    <dimen name="radius_crop_mode">1dp</dimen>
+    <dimen name="crop_icon_border_thickness">2dp</dimen>
 
 </resources>
