--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/mainActivity_drawerLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainActivity_drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +9,7 @@
     <FrameLayout
         android:id="@+id/mainActivity_fragment_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
     <android.support.design.widget.NavigationView
@@ -23,6 +22,34 @@
         app:itemIconTint="@color/white"
         app:itemTextAppearance="@style/NavDrawerTextStyle"
         app:menu="@menu/main_activity_drawer"
-    />
+        >
+
+        <FrameLayout
+            android:id="@+id/item_settings"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            >
+            <ImageView
+                android:padding="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_action_action_settings"
+                />
+            <TextView
+                android:paddingLeft="72dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Settings"
+                android:layout_gravity="center_vertical"
+                android:textAppearance="@style/NavDrawerTextStyle"
+                />
+
+        </FrameLayout>
+
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
