create ui design

--- a/app/src/main/res/layout/list_item_tool.xml
+++ b/app/src/main/res/layout/list_item_tool.xml
@@ -10,6 +10,7 @@
         android:id="@+id/image_icon"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:padding="12dp"
         android:layout_gravity="center" />
 
     <TextView
