--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="colorAccent">#1d4261</color>
     <color name="light_grey">#d3d3d3</color>
 
+    <color name="edit_unselected">#4e5b68</color>
+
+
     <color name="follow_grey">#B2B2B2</color>
 
     <color name="thirtyfive_white">#59FFFFFF</color>
