--- a/app/src/main/res/layout/fragment_chat_settings_add_user.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_add_user.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:selectableItemBackground"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
     android:orientation="horizontal"
     android:paddingRight="16dp"
     android:paddingLeft="16dp">
