--- a/app/src/main/res/layout/fragment_search_user_list_item.xml
+++ b/app/src/main/res/layout/fragment_search_user_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/search_users_list_layout"
@@ -18,7 +18,10 @@
         android:id="@+id/search_users_list_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius" />
+        app:riv_corner_radius="16dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        />
 
     <TextView
         android:id="@+id/search_users_list_name"
@@ -26,10 +29,26 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@id/search_users_list_image"
         android:ellipsize="end"
         android:lines="1"
         android:textColor="@color/eighty_black"
         android:textSize="16sp"
         tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/search_users_list_college"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@id/search_users_list_image"
+        android:layout_below="@id/search_users_list_name"
+        android:ellipsize="end"
+        android:lines="1"
+        android:textColor="@color/fifty_black"
+        android:textSize="16sp"
+        tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs" />
+
+
+</RelativeLayout>
