--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -2,7 +2,6 @@
 <FrameLayout
     android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
@@ -14,13 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.linute.linute.UtilsAndHelpers.VideoClasses.ScalableVideoView
+        <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
             android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@color/fifty_black"
-            app:scalableType="fitCenter"/>
+        />
+
     </FrameLayout>
 
     <ImageView
@@ -56,8 +56,8 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:max="1000"
         android:indeterminate="false"
+        android:max="1000"
         android:progress="1000"
         android:progressDrawable="@drawable/circle_progress"
     />
