--- a/app/src/main/res/layout/tool_options_privacy.xml
+++ b/app/src/main/res/layout/tool_options_privacy.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:layout_gravity="center_vertical"
         />
 
 
@@ -30,6 +31,7 @@
         android:layout_height="match_parent"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:layout_gravity="center_vertical"
         />
 
 
