circles for profile images

--- a/app/src/main/res/layout/fragment_create_chat_selected_users.xml
+++ b/app/src/main/res/layout/fragment_create_chat_selected_users.xml
@@ -6,7 +6,7 @@
     android:padding="4dp"
     >
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/image_user"
         android:padding="6dp"
         android:layout_width="match_parent"
