--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -105,7 +105,7 @@
         android:orientation="horizontal">
 
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <com.linute.linute.UtilsAndHelpers.ProfileImageView
             android:id="@+id/comment_user_image"
             android:layout_width="@dimen/profile_image_radius"
             android:layout_height="@dimen/profile_image_radius"
