--- a/app/src/main/res/layout/fragment_change_profile_image.xml
+++ b/app/src/main/res/layout/fragment_change_profile_image.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/changeprofileimage_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
