--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -58,7 +58,7 @@
                 android:layout_width="160dp"
                 android:layout_height="160dp">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <com.linute.linute.UtilsAndHelpers.ProfileImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <com.linute.linute.UtilsAndHelpers.ProfileImageView
                     android:id="@+id/post_profile"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
