--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -41,7 +41,7 @@
         android:visibility="gone"
     />
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/profile_image"
         android:layout_width="@dimen/chat_profile_photo_diameter"
         android:layout_height="@dimen/chat_profile_photo_diameter"
@@ -50,11 +50,8 @@
         android:layout_gravity="center"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:scaleType="centerInside"
         android:visibility="invisible"
-        app:riv_border_color="@color/seperator_color"
-        app:riv_border_width="1dp"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius"/>
+        />
 
 
     <LinearLayout
@@ -86,7 +83,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
+                    <com.linute.linute.UtilsAndHelpers.ProfileImageView
                         android:id="@+id/image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -109,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
+                    <com.linute.linute.UtilsAndHelpers.ProfileImageView
                         android:id="@+id/post_profile"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
