--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -28,7 +28,7 @@
             android:layout_height="240dp"
             android:padding="16dp">
 
-            <com.makeramen.roundedimageview.RoundedImageView
+            <com.linute.linute.UtilsAndHelpers.ProfileImageView
                 android:id="@+id/setting_group_image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -58,7 +58,7 @@
             android:layout_marginBottom="24dp"
             >
 
-            <com.makeramen.roundedimageview.RoundedImageView
+            <com.linute.linute.UtilsAndHelpers.ProfileImageView
                 android:id="@+id/dm_user_icon"
                 android:layout_width="@dimen/profile_image_radius"
                 android:layout_height="@dimen/profile_image_radius"
