--- a/app/src/main/res/layout/fragment_chat_settings_add_user.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_add_user.xml
@@ -10,7 +10,7 @@
     android:paddingRight="16dp"
     android:paddingLeft="16dp">
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/search_users_list_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
