--- a/app/src/main/res/layout/fragment_sign_up_profile.xml
+++ b/app/src/main/res/layout/fragment_sign_up_profile.xml
@@ -19,7 +19,7 @@
     />
 
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/profile_image"
         android:layout_width="128dp"
         android:layout_height="128dp"
