--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="left"
         android:layout_width="16dp"
         android:layout_height="match_parent" />-->
-    <!--<com.makeramen.roundedimageview.RoundedImageView
+    <!--<com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/toolbar_chat_user_icon"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
