updated nav drawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         app:itemIconTint="@color/white"
         app:itemTextAppearance="@style/NavDrawerTextStyle"
         app:menu="@menu/main_activity_drawer"
+        style="@style/SelectableItemBackground"
         >
 
         <FrameLayout
