--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="status_bar_color">#173856</color>
     <color name="colorPrimaryDark">#14324D</color>
     <color name="darkPrimary">#0B1E30</color>
-    <color name="colorSubPrimary">#22486a</color>
+    <color name="colorSubPrimary">#377fa9</color>
     <color name="colorAccent">#1d4261</color>
     <color name="light_grey">#d3d3d3</color>
 
