--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,78 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/mainActivity_nav_drawer_header"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="168dp"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainActivity_nav_drawer_header"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:background="#225f83"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/navigation_header_profile_image"
         android:layout_width="@dimen/nav_header_profile_side"
         android:layout_height="@dimen/nav_header_profile_side"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="16dp"
         android:src="@drawable/group_icon_inbox"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         app:civ_border_color="@color/colorPrimary"
-        app:civ_border_width="1dp"
-    />
+        app:civ_border_width="1dp" />
 
     <TextView
         android:id="@+id/drawerHeader_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/navigation_header_profile_image"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toRightOf="@id/navigation_header_profile_image"
+        android:gravity="center"
         android:ellipsize="end"
         android:lines="1"
-        android:paddingTop="4dp"
         android:textColor="@color/pure_white"
-        android:textSize="16sp"
-        tools:text="FirstName LastName"/>
+        android:textSize="32sp"
+        android:textStyle="bold"
+        tools:text="FirstName LastName" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/drawerHeader_college"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/drawerHeader_name"
-        android:layout_toRightOf="@id/navigation_header_profile_image"
-        android:orientation="horizontal">
-        <!-- pin thing -->
-        <ImageView
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/campus_pin"/>
-        <TextView
-            android:id="@+id/drawerHeader_college"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="4dp"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="College"
-            android:textColor="@color/pure_white"
-            android:textSize="14sp"
-        />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/drawerHeading_settings"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_action_action_settings"
-    />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:ellipsize="end"
+        android:lines="2"
+        android:text="College"
+        android:textColor="@color/pure_white"
+        android:textSize="16sp" />
 
 
-</RelativeLayout>
+</LinearLayout>
