--- a/app/src/main/res/layout/fragment_global_choices.xml
+++ b/app/src/main/res/layout/fragment_global_choices.xml
@@ -34,7 +34,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
