--- a/app/src/main/res/layout/global_item.xml
+++ b/app/src/main/res/layout/global_item.xml
@@ -1,51 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="136dp"
-             android:clickable="true"
-             android:foreground="?android:attr/selectableItemBackground">
 
-    <ImageView android:id="@+id/background"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_gravity="center"
-               android:scaleType="centerCrop"
-               tools:src="@color/seperator_color"/>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="128dp"
+    android:layout_margin="4dp"
+    android:background="@drawable/global_item_background"
+    android:clickable="true"
+    android:elevation="4dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        app:riv_corner_radius="8dp"
+        tools:src="@color/seperator_color"/>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:ellipsize="end"
+        android:lines="1"
+        android:shadowColor="#59000000"
+        android:shadowDy="2"
+        android:shadowRadius="1"
+        android:textColor="@color/pure_white"
+        android:textSize="14sp"
+        tools:text="Oleg! Where have u been"
+    />
+
+    <TextView android:id="@+id/text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_above="@id/text1"
+              android:layout_marginEnd="@dimen/activity_horizontal_margin"
+              android:layout_marginStart="@dimen/activity_horizontal_margin"
+              android:ellipsize="end"
+              android:lines="1"
+              android:shadowColor="#59000000"
+              android:shadowDy="2"
+              android:shadowRadius="1"
+              android:textAllCaps="true"
+              android:textColor="@color/pure_white"
+              android:textSize="26sp"
+              android:textStyle="bold"
+              tools:text="BACK TO SCHOOL"
+    />
+
+
+    <View
+        android:id="@+id/indicator"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:orientation="vertical">
+        android:background="@drawable/circle_secondary"
+    />
 
-        <TextView android:id="@+id/text"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:shadowColor="#59000000"
-                  android:textAllCaps="true"
-                  android:textColor="@color/pure_white"
-                  android:textSize="26sp"
-                  android:textStyle="bold"
-                  android:shadowDy="2"
-                  android:shadowRadius="1"
-                  tools:text="BACK TO SCHOOL"
-        />
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:shadowColor="#59000000"
-            android:textColor="@color/pure_white"
-            android:textSize="14sp"
-            android:shadowDy="2"
-            android:shadowRadius="1"
-            tools:text="Oleg! Where have u been"
-        />
-
-    </LinearLayout>
-
-
-</FrameLayout>
+</RelativeLayout>
