--- a/app/src/main/res/layout/tool_options_privacy.xml
+++ b/app/src/main/res/layout/tool_options_privacy.xml
@@ -16,7 +16,7 @@
         />
 
 
-    <ImageView
+    <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/image_profile"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
