--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -95,5 +95,6 @@
     <dimen name="chat_profile_photo_diameter">32dp</dimen>
     <dimen name="radius_crop_mode">1dp</dimen>
     <dimen name="crop_icon_border_thickness">2dp</dimen>
+    <dimen name="feed_detail_action_size">18dp</dimen>
 
 </resources>
