--- a/app/src/main/res/layout/list_item_crop_mode.xml
+++ b/app/src/main/res/layout/list_item_crop_mode.xml
@@ -6,6 +6,7 @@
     android:layout_weight="1"
     android:orientation="vertical"
     android:padding="4dp"
+    android:layout_gravity="center"
     >
 
     <FrameLayout
@@ -13,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/crop_icon_border_thickness">
+        >
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/image_crop_mode"
@@ -22,13 +23,15 @@
             android:layout_gravity="center"
             android:scaleType="centerCrop"
             app:riv_corner_radius="@dimen/radius_crop_mode"
+            android:padding="@dimen/crop_icon_border_thickness"
+
             />
 
-        <View
+        <!--<View
             android:id="@+id/layout_image_border"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+             />-->
 
     </FrameLayout>
 
