fixed memory leak

--- a/app/src/main/res/layout/trending_item_video.xml
+++ b/app/src/main/res/layout/trending_item_video.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -15,35 +14,32 @@
         android:background="@color/seperator_color"
     />
 
-    <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+    <FrameLayout
         android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/seperator_color">
-        <View
-            android:id="@+id/image_placeholder"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            />
+
         <ProgressBar
+            android:id="@+id/post_image_progress_bar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/post_image_progress_bar"
             android:layout_gravity="center"
-            android:indeterminate="true" />
+            android:indeterminate="true"/>
 
-        <com.linute.linute.SquareCamera.SquareImageView
+        <ImageView
             android:id="@+id/feedDetail_event_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
+            android:layout_height="match_parent"/>
 
-        <com.linute.linute.UtilsAndHelpers.VideoClasses.ScalableVideoView
+        <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
             android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:scalableType="centerCrop"/>
+            android:layout_gravity="center"
+            android:visibility="invisible"
+        />
 
         <ImageView
             android:id="@+id/cinema_icon"
@@ -61,7 +57,7 @@
             android:background="#EA294C"
             android:visibility="invisible"/>
 
-    </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+    </FrameLayout>
 
     <include layout="@layout/feed_detail_action_bar"/>
 
