--- a/app/src/main/res/layout/fragment_discover_feed.xml
+++ b/app/src/main/res/layout/fragment_discover_feed.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout android:id="@+id/discover_fragment_background"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-
-    <LinearLayout android:id="@+id/discover_no_posts_frame"
+    <LinearLayout android:id="@+id/empty_view"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
@@ -41,7 +39,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/eventList"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
