--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -24,7 +24,7 @@
             <FrameLayout
                 android:id="@+id/base_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 />
