--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -8,7 +8,14 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:id="@+id/image_sticker_trash"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/trash_can_closed"
+            android:layout_gravity="center"/>
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/final_content"
@@ -26,16 +33,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:gravity="center"
-                />
+                android:gravity="center" />
 
             <!-- Playground for tools -->
             <FrameLayout
                 android:id="@+id/overlays"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                />
+                android:layout_gravity="center" />
 
         </FrameLayout>
 
