--- a/app/src/main/res/layout/fragment_edit_content_need_crop.xml
+++ b/app/src/main/res/layout/fragment_edit_content_need_crop.xml
@@ -9,8 +9,14 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"/>
-
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:id="@+id/image_sticker_trash"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/trash_can_closed"
+            android:layout_gravity="center"/>
+    </android.support.v7.widget.Toolbar>
     <!--placeholder view that has 6:5 ratio-->
     <!--can be changed to square by calling setMakeSquare() and requestLayout-->
     <com.linute.linute.SquareCamera.CustomView
