--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -58,7 +58,7 @@
                 android:layout_width="160dp"
                 android:layout_height="160dp">
 
-                <com.linute.linute.UtilsAndHelpers.ProfileImageView
+                <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
