match color of all meme texts, fixed bug with mid text starting very low, mid text now starts with a capital

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,6 +70,7 @@
 
     <color name="global_hot_red">#D0021B</color>
     <color name="global_friend_orange">#F5A623</color>
+    <color name="edit_fragment_meme_text_bg">#CC173856</color>
 
 </resources>
 
