--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#CC173856"
+        android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
         android:inputType="none"
         android:nextFocusDown="@+id/text_bot"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#CC173856"
+        android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
         android:inputType="none"
         android:padding="8dp"
@@ -37,7 +37,8 @@
         android:id="@+id/text_mid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#CC000000"
+        android:layout_gravity="center_vertical"
+        android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/pure_white"
@@ -49,11 +50,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="#CC000000"
+        android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/pure_white"
         android:textSize="14sp"
+        android:inputType="textCapSentences"
     />
 
 
