--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -12,7 +12,6 @@
         android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
         android:inputType="none"
-        android:nextFocusDown="@+id/text_bot"
         android:padding="8dp"
         android:textColor="@color/pure_white"
         android:textSize="32dp"
@@ -20,7 +19,7 @@
     />
 
     <EditText
-        android:id="@id/text_bot"
+        android:id="@+id/text_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -33,7 +32,7 @@
         tools:text="Bottom Text"
     />
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/text_mid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,7 +42,7 @@
         android:padding="4dp"
         android:textColor="@color/pure_white"
         android:textSize="14sp"
-    />
+    />-->
 
     <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
         android:id="@+id/edit_text_mid"
