--- a/app/src/main/res/layout/fragment_global_choices.xml
+++ b/app/src/main/res/layout/fragment_global_choices.xml
@@ -20,7 +20,7 @@
             android:background="@color/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:navigationIcon="@drawable/ic_action_navigation_menu"
-            app:title="Globally Trending"
+            app:title="Global"
             app:titleTextColor="@color/pure_white"
         />
 
