--- a/app/src/main/res/layout/trending_name_header.xml
+++ b/app/src/main/res/layout/trending_name_header.xml
@@ -17,10 +17,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/image_loading_background"
-        app:riv_border_color="@color/seperator_color"
-        app:riv_border_width="1dp"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius"/>
+        android:src="@drawable/image_loading_background"/>
 
 
     <LinearLayout
