--- a/app/src/main/res/menu/menu_fragment_edit.xml
+++ b/app/src/main/res/menu/menu_fragment_edit.xml
@@ -4,8 +4,7 @@
     >
     <item
         android:id="@+id/menu_item_done"
-        android:title="Done"
-        android:icon="@drawable/ic_action_check83"
+        android:title="Post"
         app:showAsAction="always"
         />
 </menu>
