--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="top"
         android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
-        android:inputType="none"
+        android:inputType="none|textNoSuggestions"
         android:padding="8dp"
         android:textColor="@color/pure_white"
         android:textSize="32dp"
@@ -25,7 +25,7 @@
         android:layout_gravity="bottom"
         android:background="@color/edit_fragment_meme_text_bg"
         android:gravity="center"
-        android:inputType="none"
+        android:inputType="none|textNoSuggestions"
         android:padding="8dp"
         android:textColor="@color/pure_white"
         android:textSize="32dp"
@@ -54,7 +54,7 @@
         android:padding="4dp"
         android:textColor="@color/pure_white"
         android:textSize="14sp"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textNoSuggestions"
     />
 
 
