--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -87,6 +87,7 @@
                         android:id="@+id/image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        app:riv_corner_radius="@dimen/message_bubble_corner_radius"
                         android:scaleType="centerCrop"
                     />
 
