--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,7 +4,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="200dp"
+              android:layout_height="240dp"
               android:background="#225f83"
               android:gravity="center"
               android:orientation="vertical"
@@ -44,7 +44,8 @@
         android:lines="2"
         android:text="College"
         android:textColor="@color/pure_white"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginBottom="4dp"/>
 
 
 </LinearLayout>
