--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -13,7 +13,7 @@
             />
         <item
             android:id="@+id/navigation_item_global"
-            android:icon="@drawable/ic_action_trending"
+            android:icon="@drawable/global_icon"
             android:title="Global"
             android:checkable="true"
             app:actionLayout="@layout/main_activity_nav_action_counter"/>
