--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -36,7 +36,7 @@
     <LinearLayout android:id="@+id/findFriends_rationale_text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_gravity="center"
+                  android:layout_marginTop="64dp"
                   android:orientation="vertical"
     >
 
